This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-09-13:

- Fixed a crash on trying to append an indexed array value to an unset name
  reference, e.g.: nameref unsetref; unsetref+=(foo bar). This now produces
  a "removing nameref attribute" warning before performing the assignment.

- Fixed: assignments like name=(...) to arrays did not preserve the array and
  variable types. Fix backported from ksh 93v- beta (2013-07-19, 2013-07-27).

- Fixed: assigning an empty set () to a compound indexed array caused the -C
  attribute to be lost. Fix backported from ksh 93v- beta (2013-09-13).

2023-09-09:

- Fixed incorrect rejection of the tab key while reading input using the `read`
  built-in command. Bugs introduced on 2021-02-26 (emacs) and 2022-08-24 (vi).

- Fixed a minor bug that could cause '/opt/ast/bin/getconf PID_MAX' to
  return the wrong value when ksh is built with strict C99.

- Fixed a bug in printf %T: when using dates and times in the past, time
  zones for the present were incorrectly used, ignoring historical changes.

2023-06-13:

- Release 1.0.6.

- Fixed a serious regression in pathname expansion where quoted wildcard
  characters were incorrectly expanded if a pattern contains both a brace
  expansion and a variable expansion.

2023-06-12:

- Fixed a bug where ^X^E in emacs or 'v' in vi, which invoke a full-screen
  editor to edit the command line, could cause the wrong command line to be
  edited if two shell sessions share a .sh_history file.

- In the emacs line editor, ^X^E no longer echos the hist command it invokes.

2023-06-10:

- Ksh can now compile on most operating systems when using -std=c99 in CCFLAGS.

2023-06-09:

- Fixed a bug where the 'break' and 'continue' commands stopped working after