@@ -1182,25 +1182,6 @@ int sh_exec(const Shnode_t *t, int flags)
 								}
 							else
 								type = (execflg && !sh.subshell && !sh.st.trapcom[0]);
-							/*
-							 * A command substitution will hang on exit, writing infinite '\0', if,
-							 * within it, standard output (FD 1) is redirected for a built-in command
-							 * that calls sh_subfork(), or redirected permanently using 'exec' or
-							 * 'redirect'. This forking workaround is necessary to avoid that bug.
-							 * For shared-state comsubs, forking is incorrect, so error out then.
-							 * TODO: actually fix the bug and remove this workaround.
-							 */
-							if((io->iofile & IOUFD)==1 && sh.subshell && sh.comsub)
-							{
-								if(!sh.subshare)
-									sh_subfork();
-								else if(type==2)  /* block stdout perma-redirects: would hang */
-								{
-									errormsg(SH_DICT,ERROR_exit(1),"cannot redirect stdout"
-												" inside shared-state comsub");
-									UNREACHABLE();
-								}
-							}
 							sh.redir0 = 1;
 							sh_redirect(io,type);
 							for(item=buffp->olist;item;item=item->next)
